Fix filter list on mobile

--- a/frontend/style/components/_components.filters.scss
+++ b/frontend/style/components/_components.filters.scss
@@ -43,15 +43,15 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     -o-appearance: none;
-    appearance:none;
+    appearance: none;
     box-shadow: none;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     display: inline-block;
-	  position: relative;
+    position: relative;
     border: 1px solid $brand-light;
 
     &:active {
-      box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
     }
 
     &:checked {
@@ -61,11 +61,11 @@
 
       &:after {
         content: '\2713';
-      	font-size: 14px;
-      	position: absolute;
-      	top: -1px;
-      	left: 1px;
-      	color: $brand-lightest;
+        font-size: 14px;
+        position: absolute;
+        top: -1px;
+        left: 1px;
+        color: $brand-lightest;
       }
     }
   }
@@ -77,23 +77,26 @@
   display: block;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   position: fixed;
+  overflow-y: scroll;
   min-height: 100vh;
   width: 100%;
   background: $white;
   z-index: 9;
-  animation: slideUp  0.2s ease-out;
+  animation: slideUp 0.2s ease-out;
 }
 
 @keyframes slideUp {
-    from {
-      transform: translateY(100vh);
-    }
-    to {
-      transform: translateY(0);
-    }
+  from {
+    transform: translateY(100vh);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
-.c-filters__wrapper{
+.c-filters__wrapper {
   width: 83.33333%;
   margin: 0 auto;
   @include mq($from: desktop) {
@@ -101,7 +104,7 @@
   }
 }
 
-.c-filters__topbar{
+.c-filters__topbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
