--- a/frontend/style/utilities/_utilities.general.scss
+++ b/frontend/style/utilities/_utilities.general.scss
@@ -15,7 +15,7 @@ iframe {
 
     iframe {
       position: absolute;
-      top:0;
+      top: 0;
       left: 0;
       width: 100%;
       height: 100%;
@@ -37,3 +37,8 @@ iframe {
   position: relative;
   z-index: 3;
 }
+
+.u-overflow-hidden {
+  overflow-y: hidden;
+}
+
